pantalla de historial terminada y agregar main en el body

--- a/system_huellitas/views/public/historial_compras.html
+++ b/system_huellitas/views/public/historial_compras.html
@@ -11,27 +11,131 @@
     <link type="text/css" rel="stylesheet" href="../../resources/scss/main.css">
     <!-- Agregamos el archivo css del menu -->
     <link type="text/css" rel="stylesheet" href="../../resources/css/static_components/menu_public.css">
+    <!-- Agregamos el archivo css del historial -->
+    <link type="text/css" rel="stylesheet" href="../../resources/css/public/historial_compras.css">
 </head>
 
-<body style="background-color: #FEF6F0;">
+<body>
     <header>
         <nav id="navbar"></nav>
     </header>
 
-    <div class="container-fluid pt-5">
+    <main>
+        <div class="container-fluid pt-5">
             <br>
             <div class="p-5">
                 <h3><b>Historial de compras</b></h3>
                 <h6>Mis Compras</h6>
             </div>
-                
 
-        <div class="container shadow p-4 mt-4 rounded-4" style="background-color: #FFFFFF;">
-            <h5 >
-                <b>13 de enero, 2024</b>
-            </h5>
+
+            <div class="container shadow p-4 mt-4 rounded-4 contenedor_historial">
+                <h5>
+                    <b>13 de enero, 2024</b>
+                </h5>
+                <div class="row py-3">
+                    <div class="col-1 py-2">
+                        <img class="image-fluid" src="../../resources/img/png/historial_compra_img.png" alt="">
+                    </div>
+                    <div class="col-12 col-lg-10">
+                        <div class="row">
+                            <div class="col-9 col-lg-11 py-3">
+                                <h6><b>Bolsa pedigree - Perro mayor</b></h6>
+                                <div class="row">
+                                    <div class="col-8 col-lg-4">
+                                        <p class="fs-6">Cantidad: 2 Unidades</p>
+                                    </div>
+                                    <div class="col-8 col-lg-4 ">
+                                        <p class="fs-6">Precio Individual: $20.00</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-3 col-lg-1">
+                                <h5 class="py-4"><b>$40.00</b></h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <div class="row py-3">
+                    <div class="col-1 py-2">
+                        <img class="image-fluid" src="../../resources/img/png/historial_compra_img.png" alt="">
+                    </div>
+                    <div class="col-12 col-lg-10">
+                        <div class="row">
+                            <div class="col-9 col-lg-11 py-3">
+                                <h6><b>Bolsa pedigree - Perro mayor</b></h6>
+                                <div class="row">
+                                    <div class="col-8 col-lg-4">
+                                        <p class="fs-6">Cantidad: 2 Unidades</p>
+                                    </div>
+                                    <div class="col-8 col-lg-4 ">
+                                        <p class="fs-6">Precio Individual: $20.00</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-3 col-lg-1">
+                                <h5 class="py-4"><b>$40.00</b></h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <div class="row py-3">
+                    <div class="col-1 py-2">
+                        <img class="image-fluid" src="../../resources/img/png/historial_compra_img.png" alt="">
+                    </div>
+                    <div class="col-12 col-lg-10">
+                        <div class="row">
+                            <div class="col-9 col-lg-11 py-3">
+                                <h6><b>Bolsa pedigree - Perro mayor</b></h6>
+                                <div class="row">
+                                    <div class="col-8 col-lg-4">
+                                        <p class="fs-6">Cantidad: 2 Unidades</p>
+                                    </div>
+                                    <div class="col-8 col-lg-4 ">
+                                        <p class="fs-6">Precio Individual: $20.00</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-3 col-lg-1">
+                                <h5 class="py-4"><b>$40.00</b></h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <hr class="py-3">
+                <h5>
+                    <b>15 de enero, 2024</b>
+                </h5>
+                <div class="row py-3">
+                    <div class="col-1 py-2">
+                        <img class="image-fluid" src="../../resources/img/png/historial_compra_img.png" alt="">
+                    </div>
+                    <div class="col-12 col-lg-10">
+                        <div class="row">
+                            <div class="col-9 col-lg-11 py-3">
+                                <h6><b>Bolsa pedigree - Perro mayor</b></h6>
+                                <div class="row">
+                                    <div class="col-8 col-lg-4">
+                                        <p class="fs-6">Cantidad: 2 Unidades</p>
+                                    </div>
+                                    <div class="col-8 col-lg-4 ">
+                                        <p class="fs-6">Precio Individual: $20.00</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-3 col-lg-1">
+                                <h5 class="py-4"><b>$40.00</b></h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+            </div>
+
         </div>
-    </div>
+    </main>
 
     <div class="mt-5 p-5">
 
