--- a/system_huellitas/views/public/sobre_nosotros.html
+++ b/system_huellitas/views/public/sobre_nosotros.html
@@ -19,101 +19,107 @@
         <nav id="navbar"></nav>
     </header>
 
-    <div class="container-fluid text-center bg-orange-cream-color text-white pt-5">
-        <br>
-        <h1 class="p-3">
-            Sobre Nosotros
-        </h1>
-        <br>
-    </div>
-
-    <div class="mt-5 p-5">
-        <div class="container text-center">
-            <h3>¡Bienvenido a Huellitas Pet's! 🐾</h3>
-            <p class="text-justify">
-                Somos más que una tienda en línea; somos amantes apasionados de los perros y gatos que
-                creemos en proporcionar a tus peludos amigos las mejores experiencias de vida. En Huellitas
-                Pet's, nos dedicamos a ofrecer una amplia gama de productos cuidadosamente seleccionados
-                para satisfacer todas las necesidades de tus queridos compañeros caninos y felinos.
-            </p>
+    <main>
+        <div class="container-fluid text-center bg-orange-cream-color text-white pt-5">
             <br>
-            <h3>
-                Nuestra Pasión
-            </h3>
-            <p class="text-justify">
-                En Huellitas Pet's, comprendemos la importancia de los vínculos especiales que compartes con
-                tus mascotas. Estamos aquí para hacer que esos momentos sean aún más memorables al proporcionarte
-                productos de alta calidad que promueven la salud, el bienestar y la felicidad de tus amigos peludos.
-            </p>
-            <br>
-            <h3>
-                Variedad de Productos
-            </h3>
-            <p class="text-justify">
-                Desde juguetes interactivos y accesorios elegantes hasta alimentos nutritivos y productos de cuidado
-                personal, en Huellitas Pet's encontrarás todo lo que necesitas para consentir a tus perros y gatos.
-                Nos esforzamos por mantenernos actualizados con las últimas tendencias y novedades en el mundo de los
-                productos para mascotas.
-            </p>
+            <h1 class="p-3">
+                Sobre Nosotros
+            </h1>
             <br>
         </div>
-    </div>
 
-    <div class="container-fluid text-center bg-orange-cream-color pt-5">
-        <div class="row">
-            <div class=" col-7 col-sm-3 container">
-                <img src="../../resources/img/png/vision_img.png" class="img-fluid" alt="">
-                <h5>Visión</h5>
+        <div class="mt-5 p-5">
+            <div class="container text-center">
+                <h3>¡Bienvenido a Huellitas Pet's! 🐾</h3>
+                <p class="text-justify">
+                    Somos más que una tienda en línea; somos amantes apasionados de los perros y gatos que
+                    creemos en proporcionar a tus peludos amigos las mejores experiencias de vida. En Huellitas
+                    Pet's, nos dedicamos a ofrecer una amplia gama de productos cuidadosamente seleccionados
+                    para satisfacer todas las necesidades de tus queridos compañeros caninos y felinos.
+                </p>
                 <br>
-                <p class="text-center">
-                    Nos vemos como la principal tienda en línea de productos para perros y gatos, reconocida por nuestra
-                    pasión
-                    por el bienestar animal y la excelencia en el servicio.
+                <h3>
+                    Nuestra Pasión
+                </h3>
+                <p class="text-justify">
+                    En Huellitas Pet's, comprendemos la importancia de los vínculos especiales que compartes con
+                    tus mascotas. Estamos aquí para hacer que esos momentos sean aún más memorables al proporcionarte
+                    productos de alta calidad que promueven la salud, el bienestar y la felicidad de tus amigos peludos.
+                </p>
+                <br>
+                <h3>
+                    Variedad de Productos
+                </h3>
+                <p class="text-justify">
+                    Desde juguetes interactivos y accesorios elegantes hasta alimentos nutritivos y productos de cuidado
+                    personal, en Huellitas Pet's encontrarás todo lo que necesitas para consentir a tus perros y gatos.
+                    Nos esforzamos por mantenernos actualizados con las últimas tendencias y novedades en el mundo de
+                    los
+                    productos para mascotas.
                 </p>
                 <br>
             </div>
-            <div class=" col-7 col-sm-3 container">
-                <img src="../../resources/img/png/mision_img.png" class="img-fluid" alt="">
-                <h5>Misión</h5>
-                <br>
-                <p class="text-center">
-                    En Huellitas Pet's, nos dedicamos a fortalecer los vínculos entre dueños y mascotas mediante
-                    productos
-                    de alta calidad y servicio excepcional.
-                </p>
-                <br>
-            </div>
-            <div class="col-7 col-sm-3 container">
-                <img src="../../resources/img/png/valores_img.png" class="img-fluid" alt="">
-                <h5>Valores</h5>
-                <br>
-                <p class="text-center">
-                    Pasión por las Mascotas <br>
-                    Atención Personalizada <br>
-                    Compromiso con la Calidad <br>
-                </p>
-                <br>
-                <br>
-            </div>
         </div>
-    </div>
 
-    <div class="mt-5 p-5">
-        <div class="container text-center">
-            <h3>¡Conócenos Más!</h3>
-            <br>
-            <p class="text-justify">
-                Estamos emocionados de compartir contigo nuestra pasión por las mascotas. Explora nuestro catálogo en
-                línea y descubre por qué Huellitas Pet's es el destino perfecto para mimar a tus perros y gatos. ¡Te
-                invitamos a formar parte de nuestra comunidad y a compartir la alegría de ser un dueño de mascotas feliz
-                y satisfecho!
-                <br>
-                <br>
-                En Huellitas Pet's, creemos que cada huella cuenta. 🐾 ¡Gracias por ser parte de nuestra historia!
-            </p>
-            <br>
+        <div class="container-fluid text-center bg-orange-cream-color pt-5">
+            <div class="row">
+                <div class=" col-7 col-sm-3 container">
+                    <img src="../../resources/img/png/vision_img.png" class="img-fluid" alt="">
+                    <h5>Visión</h5>
+                    <br>
+                    <p class="text-center">
+                        Nos vemos como la principal tienda en línea de productos para perros y gatos, reconocida por
+                        nuestra
+                        pasión
+                        por el bienestar animal y la excelencia en el servicio.
+                    </p>
+                    <br>
+                </div>
+                <div class=" col-7 col-sm-3 container">
+                    <img src="../../resources/img/png/mision_img.png" class="img-fluid" alt="">
+                    <h5>Misión</h5>
+                    <br>
+                    <p class="text-center">
+                        En Huellitas Pet's, nos dedicamos a fortalecer los vínculos entre dueños y mascotas mediante
+                        productos
+                        de alta calidad y servicio excepcional.
+                    </p>
+                    <br>
+                </div>
+                <div class="col-7 col-sm-3 container">
+                    <img src="../../resources/img/png/valores_img.png" class="img-fluid" alt="">
+                    <h5>Valores</h5>
+                    <br>
+                    <p class="text-center">
+                        Pasión por las Mascotas <br>
+                        Atención Personalizada <br>
+                        Compromiso con la Calidad <br>
+                    </p>
+                    <br>
+                    <br>
+                </div>
+            </div>
         </div>
-    </div>
+
+        <div class="mt-5 p-5">
+            <div class="container text-center">
+                <h3>¡Conócenos Más!</h3>
+                <br>
+                <p class="text-justify">
+                    Estamos emocionados de compartir contigo nuestra pasión por las mascotas. Explora nuestro catálogo
+                    en
+                    línea y descubre por qué Huellitas Pet's es el destino perfecto para mimar a tus perros y gatos. ¡Te
+                    invitamos a formar parte de nuestra comunidad y a compartir la alegría de ser un dueño de mascotas
+                    feliz
+                    y satisfecho!
+                    <br>
+                    <br>
+                    En Huellitas Pet's, creemos que cada huella cuenta. 🐾 ¡Gracias por ser parte de nuestra historia!
+                </p>
+                <br>
+            </div>
+        </div>
+    </main>
 
     <footer id="footer"></footer>
 
