--- a/system_huellitas/views/public/perfil_editar.html
+++ b/system_huellitas/views/public/perfil_editar.html
@@ -20,77 +20,85 @@
         <nav id="navbar"></nav>
     </header>
 
-    <div class="container-fluid pt-5">
+    <main>
+        <div class="container-fluid pt-5">
             <br>
             <h5 class="p-5">
                 <img src="../../resources/img/png/rectangulo_naranja.png">Perfil
             </h5>
-        <div class="container shadow p-4 mt-4 rounded-4 color_conteiner_central">
-            <div class="row">
-                <div class="col-lg-4 col-md-6 col-sm-7 p-5">
-                    <form action="" id="perfil_editar_datos">
-                        <img src="../../resources/img/png/foto_perfil_publico.png" class="img-fluid">
-                        <br>
-                        <br>
-                        <div class="d-grid gap-2">
-                            <!-- Botón para cargar imagen -->
-                            <input type="file" class="form-control" id="upload_picture_profile" hidden>
-                            <!-- Para que tenga el mismo funcionamiento del input file le ponemos el for y le agregamos el id del input file -->
-                            <label class="btn btn-outline-secondary btn-lg" for="upload_picture_profile">Cargar
-                                imagen</label>
-                        </div>
-                </div>
-
-                <div class="col-lg-7 col-md-5 col-sm-8 p-5">
-                    <div class="row">
-                        <div class="col-12 col-md-6">
-                            <label for="nombre_cliente_editar_perfil" class="form-label fw-bold">Nombre</label>
-                            <input type="text" id="nombre_cliente_editar_perfil" name="nombreClienteEditarPerfil"
-                                class="form-control form-control-lg shadow  rounded-3 bg-white">
+            <div class="container shadow p-4 mt-4 rounded-4 color_conteiner_central">
+                <div class="row">
+                    <div class="col-lg-4 col-md-6 col-sm-7 p-5">
+                        <form action="" id="perfil_editar_datos">
+                            <img src="../../resources/img/png/foto_perfil_publico.png" class="img-fluid">
                             <br>
-                        </div>
-                        <div class="col-12 col-md-6">
-                            <label for="apellido_cliente_editar_perfil" class="form-label fw-bold">Apellidos</label>
-                            <input type="text" id="apellido_cliente_editar_perfil" name="apellidoClienteEditarPerfil"
-                                class="form-control form-control-lg shadow  rounded-3 bg-white">
                             <br>
-                        </div>
-                        <div class="col-12 col-md-6">
-                            <label for="DUI_cliente_editar_perfil" class="form-label fw-bold">DUI</label>
-                            <input type="number" id="DUI_cliente_editar_perfil" name="DUIClienteEditarPerfil"
-                                class="form-control form-control-lg shadow  rounded-3 bg-white">
-                            <br>
-                        </div>
-                        <div class="col-12 col-md-6">
-                            <label for="gmail_cliente_editar_perfil" class="form-label fw-bold">Correo electrónico</label>
-                            <input type="email" id="gmail_cliente_editar_perfil" name="gmailClienteEditarPerfil"
-                                class="form-control form-control-lg shadow  rounded-3 bg-white">
-                            <br>
-                        </div>
-                        <div class="col-12 col-md-6">
-                            <label for="fecha_nacimiento_cliente_editar_perfil" class="form-label fw-bold">Fecha de
-                                nacimiento</label>
-                            <input type="date" id="fecha_nacimiento_cliente_editar_perfil" name="fechaNacimientoClienteEditarPerfil"
-                                class="form-control form-control-lg shadow  rounded-3 bg-white">
-                            <br>
-                        </div>
-                        <div class="col-12 col-md-6">
-                            <label for="direccion_cliente_editar_perfil" class="form-label fw-bold">Dirección</label>
-                            <input type="text" id="direccion_cliente_editar_perfil" name="direccionClienteEditarPerfil"
-                                class="form-control form-control-lg shadow  rounded-3 bg-white">
-                            <br>
-                        </div>
+                            <div class="d-grid gap-2">
+                                <!-- Botón para cargar imagen -->
+                                <input type="file" class="form-control" id="upload_picture_profile" hidden>
+                                <!-- Para que tenga el mismo funcionamiento del input file le ponemos el for y le agregamos el id del input file -->
+                                <label class="btn btn-outline-secondary btn-lg" for="upload_picture_profile">Cargar
+                                    imagen</label>
+                            </div>
                     </div>
-                    <br>
-                    <br>
-                    <!-- Botones de acción (Agregar, Ocultar) -->
-                    <a href="../../views/public/perfil.html"><button type="button" class="btn btn-brown-color btn-lg text-white">Actualizar</button></a>
-                    <br>
+
+                    <div class="col-lg-7 col-md-5 col-sm-8 p-5">
+                        <div class="row">
+                            <div class="col-12 col-md-6">
+                                <label for="nombre_cliente_editar_perfil" class="form-label fw-bold">Nombre</label>
+                                <input type="text" id="nombre_cliente_editar_perfil" name="nombreClienteEditarPerfil"
+                                    class="form-control form-control-lg shadow  rounded-3 bg-white">
+                                <br>
+                            </div>
+                            <div class="col-12 col-md-6">
+                                <label for="apellido_cliente_editar_perfil" class="form-label fw-bold">Apellidos</label>
+                                <input type="text" id="apellido_cliente_editar_perfil"
+                                    name="apellidoClienteEditarPerfil"
+                                    class="form-control form-control-lg shadow  rounded-3 bg-white">
+                                <br>
+                            </div>
+                            <div class="col-12 col-md-6">
+                                <label for="DUI_cliente_editar_perfil" class="form-label fw-bold">DUI</label>
+                                <input type="number" id="DUI_cliente_editar_perfil" name="DUIClienteEditarPerfil"
+                                    class="form-control form-control-lg shadow  rounded-3 bg-white">
+                                <br>
+                            </div>
+                            <div class="col-12 col-md-6">
+                                <label for="gmail_cliente_editar_perfil" class="form-label fw-bold">Correo
+                                    electrónico</label>
+                                <input type="email" id="gmail_cliente_editar_perfil" name="gmailClienteEditarPerfil"
+                                    class="form-control form-control-lg shadow  rounded-3 bg-white">
+                                <br>
+                            </div>
+                            <div class="col-12 col-md-6">
+                                <label for="fecha_nacimiento_cliente_editar_perfil" class="form-label fw-bold">Fecha de
+                                    nacimiento</label>
+                                <input type="date" id="fecha_nacimiento_cliente_editar_perfil"
+                                    name="fechaNacimientoClienteEditarPerfil"
+                                    class="form-control form-control-lg shadow  rounded-3 bg-white">
+                                <br>
+                            </div>
+                            <div class="col-12 col-md-6">
+                                <label for="direccion_cliente_editar_perfil"
+                                    class="form-label fw-bold">Dirección</label>
+                                <input type="text" id="direccion_cliente_editar_perfil"
+                                    name="direccionClienteEditarPerfil"
+                                    class="form-control form-control-lg shadow  rounded-3 bg-white">
+                                <br>
+                            </div>
+                        </div>
+                        <br>
+                        <br>
+                        <!-- Botones de acción (Agregar, Ocultar) -->
+                        <a href="../../views/public/perfil.html"><button type="button"
+                                class="btn btn-brown-color btn-lg text-white">Actualizar</button></a>
+                        <br>
+                    </div>
+                    </form>
                 </div>
-                </form>
             </div>
         </div>
-    </div>
+    </main>
 
     <div class="mt-5 p-5">
 
