--- a/system_huellitas/views/public/index.html
+++ b/system_huellitas/views/public/index.html
@@ -7,26 +7,177 @@
     <!-- Agregamos una imagen para que se vea en la ventana -->
     <link type="image/png" rel="icon" href="../../resources/img/huellita_logo_without_text.png">
     <!-- Agregamos el framework de boostrap - css -->
-    <link type="text/css" rel="stylesheet" href="../../resources/scss/main.css">   
+    <link type="text/css" rel="stylesheet" href="../../resources/scss/main.css"> 
+    <!-- Agregamos su archivo css -->
+    <link type="text/css" rel="stylesheet" href="../../resources/css/public/home.css">  
     <!-- Agregamos el archivo css del menu -->
     <link type="text/css" rel="stylesheet" href="../../resources/css/static_components/menu_public.css">
 </head>
-<body>
+<body class="bg-beige-color">
     <header>
         <nav id="navbar"></nav>
     </header>
     
-
     <div class="mt-5 p-5">
-        <h1>Hola</h1>
-        <h1>Hola</h1>
-        <h1>Hola</h1>
-        <h1>Hola</h1>
+            <div class="row d-flex align-items-center">
+                <div class="col-sm-12 col-md-8 py-4" >
+                    <div class="contenedor_img1 p-5">
+                        <h1 class="text-end text-yellow-color fw-bold">HUELLITAS PET’S</h1>
+                        <p class="text-end text-light">¡Descubre  los mejores precios para <br> los consentidos de la casa!</p>
+                        <img class="float-end mt-5 p-2" src="../../resources/img/png/huellitas_logo_without_text.png" width="70px">
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-4">
+                    <div class="contenedor_img2 p-4">
+                        <h3 class="text-end text-light fw-bold">Calidad y confianza</h3>
+                        <p class="text-end text-light small">“Que hasta sus huellitas sean felices”</p>
+                    </div>
+                </div>
+            </div>  
 
-        <h1>Hola</h1>
-        <h1>Hola</h1>
-        <h1>Hola</h1>
-        
+            <p class="fs-5 fw-semibold mt-4">Encuentra los mejores productos para tus mascotas</p>
+
+            <!-- Mascota -->
+            <div class="bg-skin-color rounded-5 p-3">
+                <div class="row d-flex justify-content-center align-items-center gx-5 gy-5">
+                    <div class="col-auto">
+                        <img src="../../resources/img/png/perro_home.png" alt="">
+                        <div class="text-center mt-3">
+                            <a href="" class="btn btn-orange-color text-light d-grid grap-5">Gatos</a>
+                        </div>
+                    </div>
+                    <div class="col-auto">
+                        <img src="../../resources/img/png/cat_home.png" alt="">
+                        <div class="text-center mt-3">
+                            <a href="" class="btn btn-orange-color text-light d-grid grap-5">Gatos</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="p-3 mt-2">
+                <div class="row d-flex justify-content-center align-items-center gy-4 ">
+                    <div class="col-md-2 col-sm-12">
+                        <img src="../../resources/img/png/dog_marcas.png">
+                    </div>
+                    <div class="col-md-10 col-sm-12">
+                        <p class="fw-semibold mt-5 fs-5 mb-5">¿Estas buscando productos de una marca en especifíco?</p>
+                        <div class="d-flex justify-content-evenly">
+                            <img src="../../resources/img/png/ruffo.png" class="picture rounded-circle" alt="">
+                            <img src="../../resources/img/png/doggi.png" class="picture rounded-circle" alt="">
+                            <img src="../../resources/img/png/ruffo.png" class="picture rounded-circle" alt="">
+                            <img src="../../resources/img/png/doggi.png" class="picture rounded-circle" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Titulo de productos -->
+            <div class="text-center mt-4 mb-5">
+                <h2 class="fw-bold">Productos</h2>
+                <p>Explora nuestros productos y conciente a tus peluditos</p>
+            </div>
+
+            <div class="container-fluid bg-white p-5 d-flex justify-content-center rounded-5">
+                <div class="row d-flex gy-5">
+                        <div class="col-sm-12 col-md-3">
+                            <div class="card rounded-4 shadow" style="width: 18rem;">
+                                <div class="d-flex justify-content-center align-items-center"> 
+                                    <img src="../../resources/img/png/product2.png" width="250px" height="290px" class="p-3" alt="...">
+                                </div>
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col-7">
+                                            <h5 class="card-title fw-bold">$15</h5>
+                                        </div>
+                                        <div class="col-5">
+                                            <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                            <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                            <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                            <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                            <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                        </div>
+                                      </div>
+                                      <p class="card-text small fw-light mb-0 mt-1">Maxi Chucho</p>
+                                      <p class="fw-bold">Bolsa Maxxi Chucho - Perro adulto</p>
+                                </div>
+                              </div>
+                        </div>
+                        <div class="col-sm-12 col-md-3">
+                            <div class="card rounded-4 shadow" style="width: 18rem;">
+                                <div class="d-flex justify-content-center align-items-center"> 
+                                    <img src="../../resources/img/png/product1.png" width="250px" height="290px" class="p-3" alt="...">
+                                </div>
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col-7">
+                                            <h5 class="card-title fw-bold">$15</h5>
+                                        </div>
+                                        <div class="col-5">
+                                            <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                            <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                            <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                            <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                            <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                        </div>
+                                      </div>
+                                      <p class="card-text small fw-light mb-0 mt-1">Maxi Chucho</p>
+                                      <p class="fw-bold">Bolsa Maxxi Chucho - Perro adulto</p>
+                                </div>
+                              </div>
+                        </div>
+                        <div class="col-sm-12 col-md-3">
+                            <div class="card rounded-4 shadow" style="width: 18rem;">
+                                <div class="d-flex justify-content-center align-items-center"> 
+                                    <img src="../../resources/img/png/product1.png" width="250px" height="290px" class="p-3" alt="...">
+                                </div>
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col-7">
+                                            <h5 class="card-title fw-bold">$15</h5>
+                                        </div>
+                                        <div class="col-5">
+                                            <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                            <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                            <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                            <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                            <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                        </div>
+                                      </div>
+                                      <p class="card-text small fw-light mb-0 mt-1">Maxi Chucho</p>
+                                      <p class="fw-bold">Bolsa Maxxi Chucho - Perro adulto</p>
+                                </div>
+                              </div>
+                        </div>
+                        <div class="col-sm-12 col-md-3">
+                            <div class="col-sm-12 col-md-3">
+                                <div class="card rounded-4 shadow" style="width: 18rem;">
+                                    <div class="d-flex justify-content-center align-items-center"> 
+                                        <img src="../../resources/img/png/product3.png" width="250px" height="290px" class="p-3" alt="...">
+                                    </div>
+                                    <div class="card-body">
+                                        <div class="row">
+                                            <div class="col-7">
+                                                <h5 class="card-title fw-bold">$15</h5>
+                                            </div>
+                                            <div class="col-5">
+                                                <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                                <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                                <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                                <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                                <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                            </div>
+                                          </div>
+                                          <p class="card-text small fw-light mb-0 mt-1">Maxi Chucho</p>
+                                          <p class="fw-bold">Bolsa Maxxi Chucho - Perro adulto</p>
+                                    </div>
+                                  </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
     </div>
 
     <footer id="footer"></footer>
