--- a/system_huellitas/views/public/productos_perros_comida.html
+++ b/system_huellitas/views/public/productos_perros_comida.html
@@ -20,73 +20,108 @@
     </header>
 
     <main class="mt-5 p-5">
-        <div class="row mt-4 justify-content-center">
-            <div class="col-lg-4 col-md-6 col-sm-12 py-4 px-1 d-flex align-items-center"> <!-- Ajustes en el padding vertical y horizontal -->
-                <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <div class="container-fluid bg-white p-5 d-flex justify-content-center rounded-5">
+            <div class="row d-flex gy-5">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                    <div class="p-3 card rounded-4 shadow" style="width: 18rem;">
+                        <div class="d-flex justify-content-center align-items-center">
+                            <img src="../../resources/img/png/product2.png" width="250px" height="290px" class="p-3"
+                                alt="...">
+                        </div>
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-7">
+                                    <h5 class="card-title fw-bold">$15</h5>
+                                </div>
+                                <div class="col-5">
+                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                </div>
+                            </div>
+                            <p class="card-text small fw-light mb-0 mt-1">Maxi Chucho</p>
+                            <p class="fw-bold">Bolsa Maxxi Chucho - Perro adulto</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                    <div class="p-3 card rounded-4 shadow" style="width: 18rem;">
+                        <div class="d-flex justify-content-center align-items-center">
+                            <img src="../../resources/img/png/product1.png" width="250px" height="290px" class="p-3"
+                                alt="...">
+                        </div>
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-7">
+                                    <h5 class="card-title fw-bold">$15</h5>
+                                </div>
+                                <div class="col-5">
+                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                </div>
+                            </div>
+                            <p class="card-text small fw-light mb-0 mt-1">Maxi Chucho</p>
+                            <p class="fw-bold">Bolsa Maxxi Chucho - Perro adulto</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                    <div class="p-3 card rounded-4 shadow" style="width: 18rem;">
+                        <div class="d-flex justify-content-center align-items-center">
+                            <img src="../../resources/img/png/product1.png" width="250px" height="290px" class="p-3"
+                                alt="...">
+                        </div>
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-7">
+                                    <h5 class="card-title fw-bold">$15</h5>
+                                </div>
+                                <div class="col-5">
+                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                </div>
+                            </div>
+                            <p class="card-text small fw-light mb-0 mt-1">Maxi Chucho</p>
+                            <p class="fw-bold">Bolsa Maxxi Chucho - Perro adulto</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                    <div class="col-sm-12 col-md-3">
+                        <div class="p-3 card rounded-4 shadow" style="width: 18rem;">
+                            <div class="d-flex justify-content-center align-items-center">
+                                <img src="../../resources/img/png/product3.png" width="250px" height="290px" class="p-3"
+                                    alt="...">
+                            </div>
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-7">
+                                        <h5 class="card-title fw-bold">$15</h5>
+                                    </div>
+                                    <div class="col-5">
+                                        <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                        <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                        <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                        <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                        <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
+                                    </div>
+                                </div>
+                                <p class="card-text small fw-light mb-0 mt-1">Maxi Chucho</p>
+                                <p class="fw-bold">Bolsa Maxxi Chucho - Perro adulto</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 py-4 px-1 d-flex align-items-center"> <!-- Ajustes en el padding vertical y horizontal -->
-                <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 py-4 px-1 d-flex align-items-center"> <!-- Ajustes en el padding vertical y horizontal -->
-                <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 py-4 px-1 d-flex align-items-center"> <!-- Ajustes en el padding vertical y horizontal -->
-                <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 py-4 px-1 d-flex align-items-center"> <!-- Ajustes en el padding vertical y horizontal -->
-                <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 py-4 px-1 d-flex align-items-center"> <!-- Ajustes en el padding vertical y horizontal -->
-                <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                </div>
-            </div>
+        </div>
         </div>
     </main>
 
